--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,6 @@
     <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -28,20 +26,28 @@
     <header>
       <section class="section-header">
         <div class="container">
-          <nav>
+          <nav class="main-nav">
             <a class="logo" href="./index.html">
               <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
             </a>
             <ul class="site-nav list">
-              <li><a href="./index.html" class="link">Студія</a></li>
-              <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-              <li><a href="#" class="link">Контакти</a></li>
+              <li class="item">
+                <a href="./index.html" class="link current">Студія</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфоліо</a>
+              </li>
+              <li class="item"><a href="#" class="link">Контакти</a></li>
+            </ul>
+            <ul class="connection list">
+              <li class="item">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              </li>
             </ul>
           </nav>
-          <ul class="connection list">
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          </ul>
         </div>
       </section>
     </header>
@@ -49,118 +55,138 @@
     <!-- Main- Основной контент !!! -->
     <main>
       <section>
-        <h1 class="visually-hidden">Наша робота</h1>
-        <ul class="list">
-          <li><button class="buttom-portfolio" type="button">Усі</button></li>
-          <li><button class="buttom-portfolio" type="button">Вебсайти</button></li>
-          <li><button class="buttom-portfolio" type="button">Додатки</button></li>
-          <li><button class="buttom-portfolio" type="button">Дизайн</button></li>
-          <li><button class="buttom-portfolio" type="button">Маркетинг</button></li>
-        </ul>
+        <div class="container">
+          <div class="container-filter">
+            <h1 class="visually-hidden">Наша робота</h1>
+            <ul class="filter list">
+              <li><button class="button1 buttom-portfolio" type="button">Усі</button></li>
+              <li><button class="button2 buttom-portfolio" type="button">Вебсайти</button></li>
+              <li><button class="button3 buttom-portfolio" type="button">Додатки</button></li>
+              <li><button class="button4 buttom-portfolio" type="button">Дизайн</button></li>
+              <li><button class="button5 buttom-portfolio" type="button">Маркетинг</button></li>
+            </ul>
 
-        <ul class="list">
-          <li>
-            <href>
-              <img src="./images/portfolio/img-texnokrak.jpg" alt="фото ноутбука" width="370" />
-              <h2 class="section-title-portfolio">Технокряк</h2>
-              <p class="section-title-portfolio-text">Веб-сайт</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img
-                src="./images/portfolio/img-poster.jpg"
-                alt="чоловіки грають в баскетбол"
-                width="370"
-              />
-              <h2 class="class=" section-title-portfolio-text>Постер New Orlean vs Golden Star</h2>
-              <p class="section-title-portfolio-text">Дизайн</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img
-                src="./images/portfolio/img-seafood.jpg"
-                alt="лого компанії та назва"
-                width="370"
-              />
-              <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-              <p class="section-title-portfolio-text">Додаток</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img src="./images/portfolio/img-prime.jpg" alt="фото навушників" width="370" />
-              <h2 class="section-title-portfolio">Проєкт Prime<</h2>
-              <p class="section-title-portfolio-text">Маркетинг</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img src="./images/portfolio/img-boxes.jpg" alt="дві коробки" width="370" />
-              <h2 class="section-title-portfolio">Проєкт Boxes</h2>
-              <p class="section-title-portfolio-text">Додаток</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img src="./images/portfolio/img-inspiration.jpg" alt="фото монітору" width="370" />
-              <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
-              <p class="section-title-portfolio-text">Веб-сайт</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img
-                src="./images/portfolio/img-limited.jpg"
-                alt="розгорнутий журнал с фотографіями"
-                width="370"
-              />
-              <h2 class="section-title-portfolio">Видання Limited Edition</h2>
-              <p class="section-title-portfolio-text">Дизайн</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img src="./images/portfolio/img-lab.jpg" alt="мотузка з листочком" width="370" />
-              <h2 class="section-title-portfolio">Проєкт LAB</h2>
-              <p class="section-title-portfolio-text">Додаток</p>
-            </href>
-          </li>
-          <li>
-            <href>
-              <img
-                src="./images/portfolio/img-growing.jpg"
-                alt="людина працює за ноутбуком"
-                width="370"
-              />
-              <h2 class="section-title-portfolio">Growing Business</h2>
-              <p class="section-title-portfolio-text">Додаток</p>
-            </href>
-          </li>
-        </ul>
+            <ul class="filter-list list">
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img src="./images/portfolio/img-texnokrak.jpg" alt="фото ноутбука" width="370" />
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Технокряк</h2>
+                    <p class="section-title-portfolio-text">Веб-сайт</p>
+                  </div>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img
+                    src="./images/portfolio/img-poster.jpg"
+                    alt="чоловіки грають в баскетбол"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
+                  <p class="section-title-portfolio-text">Дизайн</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img
+                    src="./images/portfolio/img-seafood.jpg"
+                    alt="лого компанії та назва"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+                  <p class="section-title-portfolio-text">Додаток</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img src="./images/portfolio/img-prime.jpg" alt="фото навушників" width="370" />
+                  <h2 class="section-title-portfolio">Проєкт Prime</h2>
+                  <p class="section-title-portfolio-text">Маркетинг</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img src="./images/portfolio/img-boxes.jpg" alt="дві коробки" width="370" />
+                  <h2 class="section-title-portfolio">Проєкт Boxes</h2>
+                  <p class="section-title-portfolio-text">Додаток</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img
+                    src="./images/portfolio/img-inspiration.jpg"
+                    alt="фото монітору"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
+                  <p class="section-title-portfolio-text">Веб-сайт</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img
+                    src="./images/portfolio/img-limited.jpg"
+                    alt="розгорнутий журнал с фотографіями"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Видання Limited Edition</h2>
+                  <p class="section-title-portfolio-text">Дизайн</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img src="./images/portfolio/img-lab.jpg" alt="мотузка з листочком" width="370" />
+                  <h2 class="section-title-portfolio">Проєкт LAB</h2>
+                  <p class="section-title-portfolio-text">Додаток</p>
+                </a>
+              </li>
+              <li class="filter-card">
+                <a href="#" class="link-portfolio">
+                  <img
+                    src="./images/portfolio/img-growing.jpg"
+                    alt="людина працює за ноутбуком"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Growing Business</h2>
+                  <p class="section-title-portfolio-text">Додаток</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <!--Футер-->
     <footer class="footer">
-      <a href="./index.html" class="logo">
-        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-      </a>
-      <address class="address">
-        <ul class="address list">
-          <li>
-            <a
-              href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="map-link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        </ul>
-      </address>
+      <section>
+        <div class="container">
+          <div class="container-footer">
+            <a href="./index.html" class="logo">
+              <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            </a>
+            <address class="address-all">
+              <ul class="address list">
+                <li>
+                  <a
+                    href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    class="map-link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+                <li>
+                  <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
